2011-02-27  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (TESTS): Add run-readelf-twofiles.sh.
	* run-readelf-twofiles.sh: New file.

2011-02-25  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (BUILD_RPATH): Be consistent in naming.

2011-02-02  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: Add testfile55, 32 and 64-bit.
	* testfile55-64.bz2, testfile55-64.debug.bz2,
	testfile55-64.prelink.bz2, testfile55-32.bz2,
	testfile55-32.debug.bz2, testfile55-32.prelink.bz2: New.
	* Makefile.am (EXTRA_DIST): Add and update all.

2011-01-12  Roland McGrath  <roland@redhat.com>

	* run-prelink-addr-test.sh: Make symlinks to find .debug files
	corresponding to .noshdrs files.

2011-01-11  Josh Stone  <jistone@redhat.com>

	* run-prelink-addr-test.sh: Add testfile54, 32 and 64-bit.
	* testfile54-32.so.bz2, testfile54-32.so.debug.bz2,
	testfile54-32.prelink.so.bz2, testfile54-32.noshdrs.so.bz2,
	testfile54-64.so.bz2, testfile54-64.so.debug.bz2,
	testfile54-64.prelink.so.bz2, testfile54-64.noshdrs.so.bz2: New.
	* Makefile.am (EXTRA_DIST): Add and update all.

	* run-prelink-addr-test.sh: Run 32 and 64-bit testfile53 tests.
	* testfile53.bz2, testfile53.debug.bz2,
	testfile53.prelink.bz2: Deleted, so...
	* testfile53-64.bz2, testfile53-64.debug.bz2,
	testfile53-64.prelink.bz2: Recreated with 64-bit names.
	* testfile53-32.bz2, testfile53-32.debug.bz2,
	testfile53-32.prelink.bz2: New in 32-bit.
	* Makefile.am (EXTRA_DIST): Add and update all.

	* run-prelink-addr-test.sh: Run 32 and 64-bit testfile52 tests.
	* testfile52.so.bz2, testfile52.so.debug.bz2,
	testfile52.prelink.so.bz2: Deleted, so...
	* testfile52-32.so.bz2, testfile52-32.so.debug.bz2,
	testfile52-32.prelink.so.bz2: Recreated with 32-bit names.
	* testfile52-32.noshdrs.so.bz2: New data file, stripped of headers.
	* testfile52-64.so.bz2, testfile52-64.so.debug.bz2,
	testfile52-64.prelink.so.bz2, testfile52-64.noshdrs.so.bz2: New files.
	* Makefile.am (EXTRA_DIST): Add and update all.
